[package]
name = "multisig"
version = "0.1.0"
description = "Squads Multisig Program V4"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["kani"]
kani = ["anchor-lang/kani", "anchor-spl/kani"]

[dependencies]
anchor-lang = { package = "onchor", path = "/Users/swaroopmaddu/workspace/osec/Security/solana-verify/anchor" }
anchor-spl = { package = "onchor_spl", path = "/Users/swaroopmaddu/workspace/osec/Security/solana-verify/anchor_spl" }
# solana-address-lookup-table-program = "=1.14.16"
