[package]
name = "squads-multisig-program"
version = "0.2.0"
description = "Squads Multisig Program V4"
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "squads_multisig_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["kani"]
kani = ["anchor-lang/kani", "anchor-spl/kani"]

[dependencies]
anchor-lang = { package = "onchor", path = "/home/andreas/Documents/solana-fv/solana-verify/anchor" }
anchor-spl = { package = "onchor_spl", path = "/home/andreas/Documents/solana-fv/solana-verify/anchor_spl" }
solana-address-lookup-table-program = { package = "address_lookup_table", path = "/home/andreas/Documents/solana-fv/solana-verify/address_lookup_table" }
solana-security-txt = "1.1.1"
