[package]
name = "squads-multisig-program"
version = "2.1.0"
description = "Squads Multisig Program V4"
edition = "2021"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "squads_multisig_program"

[features]
default = ["custom-heap"]
custom-heap = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
kani = ["anchor-lang/kani", "anchor-spl/kani"]
testing = []

[dependencies]
anchor-lang = { package = "onchor", path = "/Users/swaroopmaddu/workspace/osec/Security/solana-verify/anchor" }
anchor-spl = { package = "onchor_spl", path = "/Users/swaroopmaddu/workspace/osec/Security/solana-verify/anchor_spl" }
solana-address-lookup-table-program = { package = "address_lookup_table", path = "/Users/swaroopmaddu/workspace/osec/Security/solana-verify/address_lookup_table" }
# solana-program = "1.17.4"
# solana-security-txt = "1.1.1"